# llm-washing-machine-claude

./: .resource_finder_complete  BEGINNER_SURPRISE_REPORT_template.md  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
datasets/compound_concepts/: beginner_surprise_compounds.json  compounds.json  samples.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: all_papers.json  compositional_representation_compound_words_multiword_expressions_language_model_20260321_050321.jsonl  selected_papers.json  superposition_polysemanticity_features_neural_networks_interpretability_20260321_045952.jsonl
papers/: README.md
papers/pages/: 2010.03058_Assessing_Phrasal_Representation_and_Composition_i_manifest.txt  2209.10652_Toy_Models_of_Superposition_manifest.txt  (+13 more)
results/: beginner_surprise_results.json  beginner_surprise_table.md  exp1_residual_stream.json  exp2_sae_features.json  exp3_next_token.json  summary.json
src/: beginner_surprise_audit.py  experiments.py  manual_sae.py
